# flaxpdf

./: .gitignore  Makefile.am  README.asciidoc  TODO.txt  configure.ac  flaxpdf.desktop
po/: Makevars  POTFILES.in  flaxpdf.pot
src/: Makefile.am  config.cpp  config.h  header  icons 32x32.h  icons.h  layout.fl  loadfile.cpp  main.cpp  main.h  view.cpp  view.h  wmicon.h
